#9 Clean up logging (WIP) #8 Clean up exception handling